[gd_scene load_steps=5 format=3 uid="uid://bjbxew068v5d3"]

[ext_resource type="Script" path="res://mainmenu/main_menu.gd" id="1_mol6r"]
[ext_resource type="Texture2D" uid="uid://bivcv6wqo0efr" path="res://assets/pointersImage.jpg" id="2_kmjwu"]

[sub_resource type="SystemFont" id="SystemFont_ieqnb"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_5kyxv"]
font_names = PackedStringArray("Impact")

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mol6r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kmjwu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_ieqnb")
theme_override_font_sizes/font_size = 64
text = "THE POINTERS GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_5kyxv")
theme_override_font_sizes/font_size = 24
text = "START  GAME "

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_5kyxv")
theme_override_font_sizes/font_size = 24
text = "EXIT"
